<resources>
    <string name="app_name">fhelp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="name">Full Name:</string>
    <string name="dob">Date Of birth:</string>
    <string name="phone_no">Phone Number:</string>
    <string name="create_password">Create Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="email">Email ID:</string>
    <string name="table_username">username</string>
    <string name="table_name">name</string>
    <string name="table_dob">dob</string>
    <string name="table_location">location</string>
    <string name="table_phoneNo">phoneNo</string>
    <string name="table_email">email</string>
    <string name="table_password">password</string>
    <string name="table_type">type</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="title_activity_add_crop">addCrop</string>
    <string name="tab_text_1">Crops</string>
    <string name="tab_text_2">Notifications</string>
    <string name="crop_rice">rice</string>
    <string name="crop_wheat">wheat</string>
    <string name="crop_mungBean">mungBean</string>
    <string name="crop_millet">millet</string>
    <string name="crop_tea">tea</string>
    <string name="crop_maize">maize</string>
    <string name="details_precipitation">precipitation</string>
    <string name="details_temp">temp</string>
    <string name="details_humidity">humidity</string>
    <string name="details_moisture">moisture</string>
    <string name="details_soilTemp">soil_temp</string>
    <string name="details_ph">ph</string>
    <string name="details_waterPh">water_ph</string>
</resources>
